--- a/src/lib/ui/__style.module.scss
+++ b/src/lib/ui/__style.module.scss
@@ -255,6 +255,7 @@ a {
   display: block;
   position: relative;
   margin-bottom: 20px;
+  margin-left: 10px;
   // margin-bottom: 12px;
   padding-left: 1.625em;
 
