--- a/src/lib/ui/__style.module.scss
+++ b/src/lib/ui/__style.module.scss
@@ -256,6 +256,11 @@ a {
   position: relative;
   margin-bottom: 20px;
   margin-left: 10px;
+
+  display: flex;
+  align-items: center;
+  gap: 10px;
+
   // margin-bottom: 12px;
   padding-left: 1.625em;
 
