--- a/src/lib/components/Products/__FiltersButton/__style.module.scss
+++ b/src/lib/components/Products/__FiltersButton/__style.module.scss
@@ -1,28 +1,27 @@
-@import '../../../ui/variables';
+@import "../../../ui/variables";
 
 .filters-button {
-    display: none;
-    color: #FFFFFF;
-    background-color: transparent;
+  display: none;
+  color: #ffffff;
+  background-color: transparent;
 
-    &:hover {
-        background: transparent;
-      }
+  &:hover {
+    background: transparent;
+  }
 
-    &-clicked {
-        background: transparent;
-      }
-    @media #{$media-query-lg} {
-        display: flex;
-        position: relative;
-        padding: .9em 1.2em;
-    }
-
+  &-clicked {
+    background: transparent;
+  }
+  @media #{$media-query-lg} {
+    display: flex;
+    position: relative;
+    padding: 0.9em 1.2em;
+  }
 }
 
 .filters-item {
-    padding: 0.5em 1em;
-    display: flex;
-    margin-bottom: 0.5em;
-    max-width: 300px;
+  padding: 0.5em 1em;
+  display: flex;
+  margin-bottom: 0.5em;
+  max-width: 300px;
 }
