--- a/src/lib/components/Layout/__Footer/__style.module.scss
+++ b/src/lib/components/Layout/__Footer/__style.module.scss
@@ -1,6 +1,8 @@
-@import '../../../ui/variables';
+@import "../../../ui/variables";
 
 .footer {
+  position: relative;
+  z-index: 100;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -14,11 +16,29 @@
   margin-top: 1em;
 
   border-top: 1px solid rgba(255, 255, 255, 0.1);
+  &__links {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 44px;
+    flex-wrap: wrap;
+  }
 
-    @media #{$media-query-sm} {
+  @media #{$media-query-sm} {
+    flex-direction: column;
+    gap: 1em;
+    &__links {
       flex-direction: column;
-      gap: 1em;
     }
+  }
+}
+
+@media screen and (max-width: 970px) {
+  .footer {
+    &__links {
+      gap: 24px;
+    }
+  }
 }
 
 .footer__telegram {
@@ -32,7 +52,7 @@
     border-bottom: 1px solid #fff;
   }
   @media #{$media-query-sm} {
-      margin-top: 1em;
+    margin-top: 1em;
   }
 }
 
@@ -51,7 +71,7 @@
     color: #fff;
   }
   @media #{$media-query-sm} {
-      margin-top: 1em;
+    margin-top: 1em;
   }
 }
 
@@ -60,5 +80,5 @@
   @media #{$media-query-sm} {
     z-index: 1000;
     margin-top: 1em;
-}
+  }
 }
