--- a/src/pages/__style.module.scss
+++ b/src/pages/__style.module.scss
@@ -94,8 +94,9 @@
 
 .product__quantity {
   position: absolute;
-  top: 10px;
-  left: 45px;
+  bottom: -16px;
+  left: 50%;
+  transform: translate(-50%, 100%);
   display: flex;
   width: 149px;
   height: 38px;
@@ -106,12 +107,7 @@
   border-radius: 100px;
   background: rgba(160, 249, 0, 0.1);
   @media #{$media-query-lg} {
-    top: 20px;
-    left: 100px;
-  }
-  @media #{$media-query-xs} {
-    top: 10px;
-    left: 50px;
+    bottom: 0;
   }
 }
 
@@ -144,6 +140,17 @@
   }
 }
 
+.back__link {
+  align-items: center;
+  display: flex;
+  @media (max-width: 418px) {
+    align-items: center;
+    justify-content: center;
+    margin-left: 0;
+    width: 100%;
+  }
+}
+
 .product__actions {
   display: flex;
   width: 100%;
@@ -158,20 +165,20 @@
       width: 100%;
     }
   }
-    &-cart {
-      display: flex;
-      padding: 16px 32px;
-      // justify-content: center;
-      // align-items: center;
-      gap: 8px;
-      color: #fff;
-      @media (max-width: 418px) {
-        width: 100%;
-      }
+  &-cart {
+    display: flex;
+    padding: 16px 32px;
+    // justify-content: center;
+    // align-items: center;
+    gap: 8px;
+    color: #fff;
+    @media (max-width: 418px) {
+      width: 100%;
     }
+  }
   @media #{$media-query-lg} {
     margin-left: 40%;
-    }
+  }
   @media #{$media-query-md} {
     justify-content: center;
     align-items: center;
@@ -196,8 +203,8 @@
   flex-direction: column;
   margin-left: 24px;
   display: flex;
-  @media (max-width: 418px) {
-    margin: 0;
+  @media #{$media-query-sm} {
+    margin-top: 50px;
   }
   justify-content: center;
 }
