--- a/src/pages/OrderPage/__style.module.scss
+++ b/src/pages/OrderPage/__style.module.scss
@@ -221,6 +221,14 @@ p {
   font-weight: 600;
 }
 
+.req__list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 0 10px;
+  margin: 0;
+}
+
 @media screen and (max-width: 480px) {
   .cancel_btn {
     padding: 10px 20px;
