--- a/src/lib/components/MainPageBanner/__style.module.scss
+++ b/src/lib/components/MainPageBanner/__style.module.scss
@@ -257,3 +257,56 @@
     background: rgba(110, 94, 197, 0.1);
   }
 }
+
+.advertisement {
+  width: 100%;
+  max-width: 1032px;
+  margin-left: auto;
+  margin-right: auto;
+  max-height: 164px;
+  border: 1px solid #a0f90166;
+  border-radius: 8px;
+  background-color: #161616;
+  margin-top: 20px;
+  overflow: hidden;
+  opacity: 0.9;
+  transition: all 0.15s;
+  img {
+    width: 100%;
+    height: 100%;
+  }
+  &:hover {
+    opacity: 1;
+  }
+  @media #{$media-query-md} {
+    display: none;
+  }
+}
+.advertisement_mobile {
+  display: none;
+  width: 100%;
+  max-width: 1032px;
+  margin-left: auto;
+  max-height: 164px;
+  border: 1px solid #a0f90166;
+  border-radius: 8px;
+  background-color: #161616;
+  overflow: hidden;
+  transition: all 0.15s;
+  img {
+    width: 100%;
+    height: 100%;
+  }
+  &:hover {
+    opacity: 1;
+  }
+  @media #{$media-query-md} {
+    max-width: 312px;
+    max-height: 260px;
+    display: block;
+    margin: auto;
+    margin-top: 30px;
+
+    padding: 0;
+  }
+}
