--- a/src/pages/OrderPage/__style.module.scss
+++ b/src/pages/OrderPage/__style.module.scss
@@ -229,6 +229,15 @@ p {
   margin: 0;
 }
 
+.buttons__wrapper {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  div {
+    margin: 0 !important;
+  }
+}
+
 @media screen and (max-width: 480px) {
   .cancel_btn {
     padding: 10px 20px;
@@ -239,5 +248,8 @@ p {
   }
   .purpose {
     font-size: 16px;
+  }
+  .buttons__wrapper {
+    flex-direction: column;
   }
 }
