--- a/src/pages/admin/Advertisement/__style.module.scss
+++ b/src/pages/admin/Advertisement/__style.module.scss
@@ -132,18 +132,22 @@
 }
 .save-btn {
   width: fit-content;
-  margin-left: auto;
   background-color: #a0f901;
 }
 .save-btn:hover {
   background-color: #85d100;
 }
 
+.buttons__wrapper {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: end;
+  gap: 20px;
+}
+
 @media screen and (max-width: 800px) {
   .loader__container {
     grid-template-columns: 1fr;
-  }
-  .save-btn {
-    margin: auto;
   }
 }
